--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             media="(min-width:600px)"
             alt="Perfume image"
           />
-          <img src="/images/image-product-mobile.jpg" alt="Perfume image" />
+          <img src="./images/image-product-mobile.jpg" alt="Perfume image" />
         </picture>
 
         <div class="product__details">
